--- a/shard.yml
+++ b/shard.yml
@@ -11,6 +11,11 @@ license: MIT
 description: |
   Interface to standard uname data via C extension
 
+development_dependencies:
+  spec2:
+    github: waterlink/spec2.cr
+
+
 scripts:
   postinstall: make shared
 
