--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: crystal
 
 # Uncomment the following if you'd like Travis to run specs and check code formatting
 script:
- - make shared
+ - make shared_fpic
  - crystal spec
 #   - crystal tool format --check
